fix overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,7 @@
   max-width: 63.2rem;
   margin: 0 auto;
   padding: 0 10px;
+  overflow: hidden;
 }
 
 input, textarea {
